[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataqualityenv"
version = "0.1.0"
description = "Data Quality Environment for RL Agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openai>=1.30.1",
    "pyyaml>=6.0.1",
    "python-multipart>=0.0.9",
    "scipy>=1.11.0",
    "requests>=2.31.0"
]
